@@ -107,6 +107,9 @@ ECL 1.0:
 	#(1 2 3)
 	> ;;; Warning: Ignoring an unmatched right parenthesis.
 
+ - RANDOM no longer overflows when the input is a bignum that does not fit in a
+   double-float.
+
 * Unicode:
 
  - MAKE-STRING only allowed :ELEMENT-TYPE to be one of CHARACTER, BASE-CHAR, or
